<resources>
    <string name="app_name">Tugas5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="home_fragment">Welcome %1$s</string>
    <string name="get_started">Get Started</string>

<!--    fragment login-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login_info">Don\'t have an account yet?</string>
    <string name="register_now">Register now</string>

<!--    fragment registration-->
    <string name="register">Register</string>
    <string name="login_now">Login now</string>
    <string name="register_info">Already Registered?</string>
    <string name="re_enter_pass">Re-enter Password</string>

<!--    string array-->
    <string-array name="splash_message">
        <item>Haii ini Kubo-san</item>
        <item>Kalian mau disapa ama kubo-san?</item>
        <item>Ayo buruan login!</item>
    </string-array>

    <string-array name="widget">
        <item>⬤○○</item>
        <item>○⬤○</item>
        <item>○○⬤</item>
    </string-array>
</resources>